--- a/code/cliente/templates/client_list.html
+++ b/code/cliente/templates/client_list.html
@@ -1,64 +1,73 @@
 {% extends 'base/base.html' %}
+{% load static %}
 {% block title %}<h1 class="mont-serrat">Clientes</h1>{% endblock title %}
 {% block breadcrumb %}
     <li class="breadcrumb-item"><a href="/">Home</a></li>
     <li class="breadcrumb-item active">Clientes</li>
 {% endblock %}
 {% block content %}
-<div class="container-fluid">
-    <div class="card">
+
+<div class="card card-solid">
+    <form action="{% url 'client:list' %}" method="get">
         <div class="card-header">
-            <h2 class="card-title">Clientes</h2>
-            <div class="card-tools">
-                <div class="input-group input-group-sm">
-                    <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-default">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
+            <div class="input-group">
+                <input type="search" class="form-control form-control-lg" name="q" placeholder="Pesquisar cliente">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-lg btn-default">
+                        <i class="fa fa-search"></i>
+                    </button>
                 </div>
             </div>
         </div>
-        <div class="card-body p-0">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>Nome</th>
-                        <th>Email</th>
-                        <th>Numero</th>
-                        <th>Cpf/Cnpj</th>
-                        <th>Tipo</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for client in clients %}
-                    <tr>
-                            <td><a href="{% url 'client:detail' client.pk %}">{{ client }}</a></td>
-                            <td>{{ client.nome }}</td>
-                            <td>{{ client.email }}</td>
-                            <td>{{ client.numero }}</td>
-                            <td>{{ client.cpf_cnpj }}</td>
-                            <td>{{ client.tipo }} </td>
-                            <td><a href="{% url 'client:detail' client.pk %}"><i class="fas fa-trash-alt" style="color: #ff0000;"></i></a></td>
-                    <tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <div class="card-footer clearfix">
-                <button class="btn btn-success btn-sm mont-serrat" data-toggle="modal" data-target="" >
-                    Novo Cliente
-                </button>
+    </form>
+    <div class="card-body pb-0">
+        <div class="row">
+            {% for client in clients %}
+                <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch flex-column">
+                    <div class="card bg-light d-flex flex-fill">
+                        <a href="{% url 'client:detail' client.pk %}">
+                        <div class="card-header text-muted border-bottom-0">
+                            {{client}}
+                        </div>
+                        <div class="card-body pt-0">
+                            <div class="row">
+                                <div class="col-7">
+                                    <h2 class="lead text-dark" style="text-decoration: none;"><b>{{client.nome}}</b></h2>
+                                    <span class="text-muted "><b>Profissão </b> {{client.profissao}} </span><br>
+                                    <span class="text-muted "><b>Estado Civil </b> {{client.estado_civil}} </span><br>
+                                    <span class="text-muted "><b>Cpf/Cnpj </b> {{client.cpf_cnpj}} </span><br>
+                                    <span class="text-muted "><b>Registrado</b> {{client.created_at}} </span><br>
+                                </div>
+                                <div class="col-5 text-center">
+                                    {% if client.image %}
+                                        <img src="{{ client.image.url }}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                                    {% else %}
+                                        <img src="{% static 'dist/img/images/unknown_user.jpg' %}" alt="user-avatar" style="width: 120px; height: 120px;" class="img-circle img-fluid">
+                                    {% endif %}
+                                </div>
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+        {% endfor %}
 
-                <ul class="pagination pagination-sm m-0 float-right">
-                <li class="page-item"><a class="page-link" href="#">«</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
+        </div>
+    </div>
+    
+    <div class="card-footer">
+        <nav aria-label="Contacts Page Navigation">
+            <ul class="pagination justify-content-center m-0">
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
                 <li class="page-item"><a class="page-link" href="#">2</a></li>
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">»</a></li>
-                </ul>
-            </div>
-        </div>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#">6</a></li>
+                <li class="page-item"><a class="page-link" href="#">7</a></li>
+                <li class="page-item"><a class="page-link" href="#">8</a></li>
+            </ul>
+        </nav>
     </div>
 </div>
 {% endblock %}
