--- a/code/processo/templates/lawsuit_list.html
+++ b/code/processo/templates/lawsuit_list.html
@@ -7,19 +7,18 @@
 {% block content %}
 <div class="container-fluid">
     <div class="card">
-        <div class="card-header">
-            <h2 class="card-title">Processos</h2>
-            <div class="card-tools">
-                <div class="input-group input-group-sm">
-                    <input type="text" name="table_search" class="form-control float-right" placeholder="Pesquisar">
+        <form action="{% url 'lawsuit:list' %}" method="get">
+            <div class="card-header">
+                <div class="input-group">
+                    <input type="search" class="form-control form-control-lg" name="q" placeholder="Pesquisar processos">
                     <div class="input-group-append">
-                        <button type="submit" class="btn btn-default">
-                            <i class="fas fa-search"></i>
+                        <button type="submit" class="btn btn-lg btn-default">
+                            <i class="fa fa-search"></i>
                         </button>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
         <div class="card-body p-0">
             <table class="table">
                 <thead>
