--- a/code/project/templates/base/body/sidebar.html
+++ b/code/project/templates/base/body/sidebar.html
@@ -28,6 +28,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="" class="nav-link sidebar-text">
+                        <p>
+                            <i class="fas fa-user-tie" style="color: #ffffff;"></i>
+                            Advogados
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="#" class="nav-link sidebar-text">
                         <p>
                             <i class="fas fa-users" style="color: #ffffff;"></i>
